# image-comparison-tests

./: .gitattributes  .gitignore  AUTHORS.md  README.md  pyproject.toml
ansible/: ansible.cfg  inventory.ini  inventory.yml
ansible/files/systemd/: bildabgleich.service
ansible/playbooks/: deploy_image_comparison.yml  test.yml
ansible/playbooks/templates/nginx/sites-available/: image-comparison
ansible/playbooks/templates/systemd/: image-comparison.service
ansible/roles/add_user/tasks/: main.yml
ansible/roles/certbot_nginx/tasks/: certificate.yml  main.yml
ansible/roles/configure_nginx/tasks/: main.yml
ansible/roles/deploy_data/tasks/: main.yml
ansible/roles/install_dependencies/tasks/: main.yml
ansible/roles/manage_services/tasks/: main.yml
ansible/templates/nginx/sites-available/: bildabgleich
behave/: create_reference.py
satpy/readers/: li_l2_nc.py
serverLogic/: __init__.py  api_utils.py  config.py  container_utils.py  server.py  start_server.sh
serverLogic/static/: styles.css
serverLogic/templates/: latest_results.html  more_results.html  test_results.html  test_results_images.html
tests/: __init__.py  test_api_utils.py
